# jarvis

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  app.db-shm  app.db-wal  beta.md  docker-compose.yml  evo.md  plan3.md  plan_memory.md  planv2.md  pyproject.toml  run_all.sh  sec.md  start-dev.sh  updatedocs.md  whatsapp.md
.github/: dependabot.yml
.github/workflows/: branch-policy.yml  ci.yml  release.yml
.jarvis/: repo_index.json  repo_index.sha256
agents/: TEAM.md
deploy/: healthcheck.sh  install-systemd.sh  restore_db.sh  rollback.sh  soak-monitor.sh
docs/: DOCS_AGENT_PROMPT.md  FEATURE_BUILDER_PROMPT.md  PLAN.md  README.md  api-reference.md  api-usage-guide.md  architecture.md  build-release.md  change-safety.md  cli-reference.md  codebase-tour.md  configuration.md  deploy-operations.md  docs-drift-matrix.md  evolution-whatsapp-memory-execution-plan.md  feature-roadmap-whatsapp-memory-2026-02-18.md  getting-started.md  git-workflow.md  github-pr-automation.md  local-development.md  memory-roadmap-todo.md  memory-roadmap.md  postgres-migration.md  release-checklist.md  release-evidence.md  runbook.md  security-audit-2026-02-18.md  security-risk-acceptance.md  skill-manifest.md  testing.md  web-admin-guide.md
scripts/: check_coverage.py  dev_preflight_ports.py  dispatch_automation.py  docs_check.py  generate_api_docs.py  new_user_smoke.py  retrieval_benchmark_report.py  test_migrations.py  validate_agents.py  web_install.py
skills/: jarvis-project.md  skills-standard.md
tests/: conftest.py
web/: eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
web/src/: App.tsx  (+1 more)
(+364 files in other folders)
