[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "jarvis-agent-framework"
version = "0.1.0"
description = "Agent Framework MVP aligned with SPEC-001 planv2"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.120.4",
  "uvicorn[standard]==0.35.0",
  "pydantic==2.11.7",
  "pydantic-settings==2.11.0",
  "httpx==0.28.1",
  "python-dotenv==1.1.1",
  "click>=8.1,<9",
  "textual>=1.0,<2",
  "tiktoken>=0.7,<1",
  "structlog>=24.1,<26",
  "slowapi>=0.1.9,<1",
  "faster-whisper>=1.1,<2",
]

[project.scripts]
jarvis = "jarvis.cli.main:cli"

[dependency-groups]
dev = [
  "pytest==8.4.2",
  "pytest-cov==7.0.0",
  "pytest-asyncio==1.2.0",
  "pytest-timeout==2.4.0",
  "ruff==0.12.12",
  "mypy==1.17.1",
  "types-python-dateutil==2.9.0.20250822",
  "pre-commit>=4.0,<5",
  "bandit>=1.8,<2",
  "pip-audit>=2.7,<3",
  "python-semantic-release>=9.0,<10",
  "diff-cover>=9.0,<10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q --timeout=30"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true
ignore_missing_imports = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["jarvis.tasks.*"]
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.semantic_release]
version_variables = ["pyproject.toml:version"]
branch = "master"

[tool.uv]
default-groups = ["dev"]
